# PaxOS

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  bochsrc  build.sh  disassemble.sh  gdb.sh  grub.cfg  headers.sh  i386-elf.txt  iso.sh  qemu.sh
kernel/: CMakeLists.txt  Makefile  build-iso.py  kernel.c  meson.build
kernel/arch/i386/: CMakeLists.txt  boot.c  boot.s  cpu.h  crti.s  crtn.s  gdt.s  idt.s  linker.ld  make.config  multiboot.s  tty.c  tty.h
kernel/arch/i386/tty/: tty.c
kernel/include/: kernel.h
kernel/include/kernel/: acpi.h  protect.h  rsdp.h  tty.h
kernel/include/pax/: acpi.h  boot_info.h  interrupt.h  memory.h  multiboot.h  protect.h
kernel/kernel/: interrupt.c  kernel.c  protect.c  rsdp.c  stack_prot.c
kernel/lib/libc/: meson.build
kernel/lib/libc/arch/i386/: io.c
kernel/lib/libc/include/sys/: types.h
kernel/lib/libc/stdio/: printf.c
kernel/lib/libc/stdlib/: abort.c
kernel/lib/memory/: CMakeLists.txt  map.h  paging.c  paging.h
kernel/lib/multiboot2/: CMakeLists.txt  multiboot2.c  multiboot2.h
kernel/lib/tty/: CMakeLists.txt  tty.h
kernel/pax/: _acpi.c  acpi.c  boot_info.c  interrupt.c  kernel.c  memory.c  protect.c  stack_prot.c
libc/: CMakeLists.txt  Makefile
libc/arch/i386/: _io.s  io.c  make.config
libc/include/: stdio.h  stdlib.h  string.h
libc/include/sys/: io.h  types.h
libc/stdio/: putchar.c  sprintf.c
libc/stdlib/: abort.c  itoa.c
libc/string/: strcpy.c  strrev.c
toolchains/: i386.cmake
